Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetnumber.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, number> yoda
        check
            number ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
