Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetundefinedFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, undefined> yoda
        boolean wrongRet = yoda(one, two)
     end
end
